logs/Slang/chapter-8/8.26.7--partial_implementation.sv.log
name: partial_implementation
description: virtual classes can implement their interfaces partially
should_fail: 0
tags: 8.26.7
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.7--partial_implementation.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.7--partial_implementation.sv:8:2: error: language feature not yet supported
	interface class ihello;
	^~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.7--partial_implementation.sv:13:2: error: language feature not yet supported
	virtual class vhello implements ihello;
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.7--partial_implementation.sv:20:2: error: language feature not yet supported
	class helloworld extends vhello;
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.7--partial_implementation.sv:26:2: error: use of undeclared identifier 'helloworld'
	helloworld obj;
	^~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.7--partial_implementation.sv:29:9: error: language feature not yet supported
		obj = new;
		      ^~~
